src/test/resources/scripts/language/parser/invalid/coercion/arithmetic/negativeFunction.sbsc
// this function returns type NUM, we should not be able to negate it

-(a: num): num -> a;

return false;